<resources>
    <string name="app_name">Ive</string>
    <string name="photo">photo</string>
    <string name="log_in">Log in</string>
    <string name="sign_up">Sign up</string>
    <string name="register">Register</string>
    <string name="next">Next</string>
    <string name="text_tag">By signing up, you agree to Photo’s Terms of Service and Privacy Policy.</string>
    <string name="enter_tag">Enter your tag</string>
    <string name="example_mail">jane@example.com</string>
    <string name="enter_login_and_password">Enter login and password</string>
    <string name="invalid_email">Invalid email</string>
    <string name="discover">Discover</string>
    <string name="what_s_new_today">What’s new today</string>
    <string name="browse_all">browse all</string>
    <string name="see_more">see more</string>
    <string name="follow">follow %s</string>
    <string name="all_results">all results</string>
    <string name="search_all_photos">Search all photos</string>
    <string name="search">Search</string>
    <string name="chats">Chats</string>
    <string name="add_photo">Add photo</string>
    <string name="no_connections">No connections</string>
</resources>