<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_title"
                style="@style/GeneralBl.Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_horizontal"
                android:layout_marginTop="@dimen/margin_to_title"
                android:text="@string/search"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_search"
                style="@style/EditText"
                android:inputType="text"
                android:imeOptions="actionDone"
                android:singleLine="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/search_all_photos"
                android:layout_marginStart="16dp"
                android:layout_marginTop="@dimen/margin_to_title"
                android:layout_marginEnd="@dimen/margin_horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_title" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_result"
                style="@style/GeneralBl.TextRoboto.Normal"
                android:visibility="invisible"
                android:textStyle="bold"
                android:textAllCaps="true"
                android:textSize="@dimen/main_text_size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_horizontal"
                android:layout_marginTop="@dimen/margin_to_title"
                android:text="@string/all_results"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_search" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_list_photo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:listitem="@layout/recycler_vertical_search_item"
                android:layout_marginStart="11dp"
                android:layout_marginTop="19dp"
                android:layout_marginEnd="11dp"
                android:layout_marginBottom="@dimen/margin_to_title"
                app:layout_constraintBottom_toTopOf="@+id/bt_see_more"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_result" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/bt_see_more"
                style="@style/ButtonWhite"
                android:visibility="invisible"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/see_more"
                android:layout_marginStart="@dimen/margin_horizontal"
                android:layout_marginEnd="@dimen/margin_horizontal"
                android:layout_marginBottom="@dimen/margin_to_title"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>
</layout>