<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
<!--    <data>-->
<!--        <variable-->
<!--            name="viewModel"-->
<!--            type="com.example.registrationapp.onboarding.registration.RegistrationViewModel" />-->
<!--    </data>-->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".onboarding.login.LoginFragment">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ib_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/margin_horizontal"
            app:srcCompat="@drawable/ic_union"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_text"
            style="@style/GeneralBl.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_horizontal"
            android:layout_marginTop="44dp"
            android:text="@string/register"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edt_login"
            style="@style/EditText"


            android:hint="@string/example_mail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_to_title"
            app:layout_constraintTop_toBottomOf="@+id/tv_text"
            android:layout_marginStart="@dimen/margin_horizontal"
            android:layout_marginEnd="@dimen/margin_horizontal"
            app:layout_constraintStart_toStartOf="parent"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edt_password"
            style="@style/EditText"



            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_horizontal"
            android:inputType="textPassword"
            app:layout_constraintTop_toBottomOf="@+id/edt_login"
            tools:layout_editor_absoluteX="16dp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_next"
            style="@style/ButtonBlack"
            android:text="@string/next"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"



            app:layout_constraintTop_toBottomOf="@+id/edt_password"
            android:layout_margin="@dimen/margin_horizontal"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>