<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cons_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_discover"
                style="@style/GeneralBl.Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_horizontal"
                android:layout_marginTop="@dimen/margin_to_title"
                android:text="@string/discover"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_news"
                style="@style/GeneralBl.TextRoboto.Normal"
                android:textStyle="bold"
                android:textAllCaps="true"
                android:textSize="13sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_horizontal"
                android:layout_marginTop="@dimen/margin_to_title"
                android:text="@string/what_s_new_today"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_discover" />

            <androidx.recyclerview.widget.RecyclerView
                tools:layout="@layout/recycler_horizontal_item"
                android:id="@+id/rv_listItem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_news" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_browse_all"
                style="@style/GeneralBl.TextRoboto.Normal"
                android:textStyle="bold"
                android:textAllCaps="true"
                android:textSize="13sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_horizontal"
                android:layout_marginTop="@dimen/margin_to_title"
                android:text="@string/browse_all"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rv_listItem" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_list_photo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                app:layout_constraintTop_toBottomOf="@+id/tv_browse_all"/>

            <androidx.appcompat.widget.AppCompatButton
                style="@style/ButtonWhite"
                android:text="@string/see_more"
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:layout_marginStart="@dimen/margin_horizontal"
                android:layout_marginEnd="@dimen/margin_horizontal"
                android:layout_marginTop="28dp"
                android:layout_marginBottom="@dimen/margin_to_title"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rv_list_photo" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</layout>